[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.53.2", features = ["tcp", "tls", "dns", "async-std", "noise", "yamux", "websocket", "ping", "macros", "full"] }
tokio = { version = "1.38.1", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120", features = [] }
